--- a/index.html
+++ b/index.html
@@ -1,80 +1,61 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Shivansh Rastogi</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-image" />
+      <h1> I'm Shivansh</h1>
+      <h2> a <span>pro</span>grammer</h2>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image" />
+      <img src="images/mountain.png" alt="mountain-image">
+    </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img src="images/profile-modified.png" alt="My Image">
+        <h2>Hello.</h2>
+        <p class="intro">I am a Web Developer.Currently an undergraduate . I like to Play🏏Cricket and watch Movies .</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="computer" src="https://cdn-icons-png.flaticon.com/512/1329/1329016.png" alt="computer">
+          <h3>Design & Development</h3>
+          <p>I started to code when I was 12 years old because I wanted to make my own video games. Since the i have been working hard to achieve the skills and trying to develop my own web and mobile applications</p>
+        </div>
+        <div class="skill-row">
+          <img class="space" src="https://as1.ftcdn.net/v2/jpg/00/79/28/02/1000_F_79280294_NkWG6Que6d5MczGYlcavix5YejehmDMz.jpg" alt="space">
+          <h3>Gaming</h3>
+          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>If you want to be a part of my Journey.</h3>
+        <p class="contact">Wants to connect with me and be a Programmer and a developer soon .</p>
+        <a class="btn" href="mailto:shivanshrastogi0111@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
 
-<head>
-  <meta charset="utf-8">
-  <title> Shivansh's Personal Site</title>
-</head>
 
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="profile-modified.png" alt="Shivansh Profile Picture" height="100" width="130" /></td>
-      <td><h1> Hello Everyone myself Shivansh Rastogi</h1>
-      <p> <i>
-          A Btech Undergraduate at <strong><a href="https://www.kiet.edu">KIET</a></strong> Group Of Instituions
-        </i>
-      </p>
-      <p>
-        Hey Geeks This side Shivansh a technophile and a keen learner. I belongs
-        from a holy place called Ayodhya<em>(birthplace of lord Rama)</em>.I am
-        feeling happy to announce that i have started my journey to become a full
-        stack web developer
-        with the <strong>Angela Yu</strong>.
-      </p></td>
-    </tr>
-  </table>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p class="copyright">© 2022 Shivansh Rastogi @KIET Group Of Institutions</p>
+    </div>
 
-  <hr noshade size="3" />
-  <h3><strong>Education</strong></h3>
-  <ul type="square">
-    <li>Completed my Primary eductaion From <a href="https://cambrianschool.com/">The Cambrian School</a>, Ayodhya</li>
-    <li>Completed My secondory and senior secondary Education From <a href="https://jbacademy.org/">JB Academy</a>, Ayodhya</li>
-    <li>Undergraduate and pursuing B.Tech from KIET Group Of Instituions , Ghaziabad </li>
-  </ul>
-  <hr>
-  <h3>Work Experience</h3>
-  <table contenteditable="10">
-    <thead>
-      <th>Date</th>
-      <th>Work</th>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2004-2019</td>
-        <td>Schooling</td>
-      </tr>
-      <tr>
-        <td>2021-2025</td>
-        <td>College</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <table cellspacing="10">
-          <tr>
-            <td>Java</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Web Development</td>
-            <td>⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Cricket</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Communication</td>
-            <td>⭐</td>
-          </tr>
-        </table>
-  <hr>
 
-  <a href="Hobbies.html">My Hobbies</a>
-  <br />
-  <a href="Contact.html">Contact Me</a>
-</body>
 
+
+  </body>
 </html>
